fix: add filter to search api and partition router
